tweak appearance of corkboard and cards

--- a/src/components/IndexCard.css
+++ b/src/components/IndexCard.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: lightskyblue;
+    background-color: #fefae0;
     min-height: 20vh;
     max-height: 20vh;
     width: 12em;
