--- a/src/components/Corkboard.css
+++ b/src/components/Corkboard.css
@@ -10,9 +10,9 @@
 } */
 
 .corkboard__board {
-    /* min-height: 70vh;
-    max-height: 70vh; */
-    /* width: 100%; */
+    min-height: 70vh;
+    max-height: 70vh;
+    width: 85%;
     overflow: auto;
     background-color: #e1bb80;
     border-color: #352208;
